<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.appl.fastnote.WriteActivityProfile">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar_write_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/Theme.ToolbarStyle"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/labelProfile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="@+id/profile_name"
            app:layout_constraintBottom_toBottomOf="@+id/profile_name"
            app:layout_constraintStart_toStartOf="parent"
            />
        <EditText
            android:id="@+id/profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="25sp"
            android:hint="@string/profile_dot"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelProfile_name"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/labelProfile_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_blog"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:textSize="25sp"
            android:autoLink="web"
            android:linksClickable="true"
            app:layout_constraintTop_toTopOf="@+id/profile_blog"
            app:layout_constraintBottom_toBottomOf="@+id/profile_blog"
            app:layout_constraintStart_toStartOf="parent"
            />
        <EditText
            android:id="@+id/profile_blog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="textUri"
            android:linksClickable="true"
            android:autoLink="web"
            android:hint="@string/profile_dot"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@+id/profile_name"
            app:layout_constraintStart_toEndOf="@+id/labelProfile_birth"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/labelProfile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="@+id/profile_email"
            app:layout_constraintBottom_toBottomOf="@+id/profile_email"
            app:layout_constraintStart_toStartOf="parent"
            />
        <EditText
            android:id="@+id/profile_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:hint="@string/profile_dot"
            android:imeOptions="actionDone"
            android:autoLink="email"
            android:linksClickable="true"
            app:layout_constraintTop_toBottomOf="@+id/profile_blog"
            app:layout_constraintStart_toEndOf="@+id/labelProfile_email"
            app:layout_constraintEnd_toEndOf="parent" />
            <EditText
                android:hint="@string/profile_info"
                android:id="@+id/profile_info"
                android:gravity="top"
                android:inputType="textMultiLine|text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="25sp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                app:layout_constraintTop_toBottomOf="@+id/profile_email"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>